# snooze

./: .gitignore  CMakeLists.txt  cmake_gen.sh  data_gen.sh.template
CMake/: Config.cmake.template  Version.cmake
CMake/Modules/: Define_CMakeDefaults.cmake  Define_CompilerFlags.cmake  Macro_AddSources.cmake
src/: CMakeLists.txt  main.cpp
src/assets/: CMakeLists.txt
src/snooze/: CMakeLists.txt  GameEvents.h  Precomp.h  Snooze.cpp  Snooze.h  SnoozeConfig.h  Story.cpp  Story.h
src/snooze/data/: CMakeLists.txt  DataList.cpp  DataList.h  EntityCatalog.cpp  EntityCatalog.h  EntityFactories.cpp  EntityFactories.h  FontCatalog.cpp  FontCatalog.h  FontFactories.cpp  FontFactories.h  MusicCatalog.cpp  MusicCatalog.h  MusicFactories.cpp  MusicFactories.h  SoundBufferCatalog.cpp  SoundBufferCatalog.h  SoundBufferFactories.cpp  SoundBufferFactories.h  SoundCatalog.cpp  SoundCatalog.h  SoundFactories.cpp  SoundFactories.h  SpriteCatalog.cpp  SpriteCatalog.h  SpriteFactories.cpp  SpriteFactories.h  TextureCatalog.cpp  TextureCatalog.h  TextureFactories.cpp  TextureFactories.h
src/snooze/data/def/: CMakeLists.txt  entity.yaml  font.yaml  music.yaml  sound.yaml  soundbuffer.yaml  sprite.yaml  texture.yaml
src/snooze/ecs/: CMakeLists.txt  HoverableComponent.cpp  HoverableComponent.h  HoveringSystem.cpp  HoveringSystem.h  RefereeSystem.cpp  RefereeSystem.h  SnoozableComponent.cpp  SnoozableComponent.h  SnoozeSystem.cpp  SnoozeSystem.h  SoundClickableComponent.cpp  SoundClickableComponent.h  SoundClickingSystem.cpp  SoundClickingSystem.h
src/snooze/ecs/minigame/: BaseMiniGame.cpp  BaseMiniGame.h  BaseMiniGameComponent.cpp  BaseMiniGameComponent.h  CMakeLists.txt
src/snooze/ecs/minigame/battery/: BatteryMiniGameComponent.cpp  BatteryMiniGameComponent.h  BatteryMiniGameSystem.cpp  BatteryMiniGameSystem.h  CMakeLists.txt
src/snooze/ecs/minigame/mouseattack/: CMakeLists.txt  MouseAttackMiniGameComponent.cpp  MouseAttackMiniGameComponent.h  MouseAttackMiniGameSystem.cpp  MouseAttackMiniGameSystem.h
src/snooze/ecs/minigame/padlock/: CMakeLists.txt  PadlockMiniGameComponent.cpp  PadlockMiniGameComponent.h  PadlockMiniGameSystem.cpp  PadlockMiniGameSystem.h
src/snooze/ecs/minigame/sample/: CMakeLists.txt  SampleMiniGameComponent.cpp  SampleMiniGameComponent.h  SampleMiniGameSystem.cpp  SampleMiniGameSystem.h
src/snooze/ecs/minigame/vermins/: CMakeLists.txt  VerminsMiniGameComponent.cpp  VerminsMiniGameComponent.h  VerminsMiniGameSystem.cpp  VerminsMiniGameSystem.h
src/snooze/gamestate/: BaseGameState.cpp  BaseGameState.h  BaseInputMapping.cpp  BaseInputMapping.h  CMakeLists.txt  GameOverState.cpp  GameOverState.h
src/snooze/presentation/: CMakeLists.txt  ConfigView.cpp  ConfigView.h  GameOverView.cpp  GameOverView.h  GameOverViewController.cpp  GameOverViewController.h  ItemView.cpp  ItemView.h  SnoozeDataAccessor.cpp  SnoozeDataAccessor.h  SnoozeView.cpp  SnoozeView.h  SnoozeViewController.cpp  SnoozeViewController.h  StoryView.cpp  StoryView.h
